--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 	  <!-- attach css files here -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/about.css" />
     <link rel="stylesheet" href="assets/css/home.css" />
 	  <link rel="apple-touch-icon" sizes="180x180" href="assets/logo/favicon.jpeg">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/logo/favicon.jpeg">
@@ -33,7 +31,7 @@
     <section class="home1">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><img src="./assets/images/apple-icon-144x144.png" height="50rem" width="50rem" style="border-radius: 50%; margin-left: 30px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,10 +60,11 @@
       </div>
     </nav>
     <div class="container d-flex" style="max-width: 100%; margin-top:20px">
-      <div class="card" style="height: fit-content;">
+      <div class="card" style="height: fit-content; max-width: 40rem;">
         <div class="card-body">
           <h1 class="card-title">WELCOME TO CODERS EVOKE</h1>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Coders Evoke is all about sharing knowledge, posting achievements, participating in hackathons, discussions and many more! </p>
+          <button type="button" class="btn button">Join Us</button>
         </div>
       </div>
      <div class="amico">
