--- a/index.html
+++ b/index.html
@@ -72,7 +72,37 @@
      </div>
     </div>
   </section>
-
+  <section class="features">
+    <h1 class="text-center">Benefits of Joining Us</h1>
+    <div class="container">
+      <div class="row" style="height:25rem">
+        <div class="col first">
+          <div class="box-background"></div>
+          <div class="text-center align-middle content"><p>Expand your area of expertise</p></div>
+        </div>
+        <div class="col second">
+         <img src="./assets/img/rafiki.png" width="80%" height="65%">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col first">
+          <img src="./assets/img/rafiki1.png" width="80%" height="65%">
+         </div>
+        <div class="col second">
+          <div class="box-background"></div>
+          <div class="text-center align-middle content"><p>For support and motivation</p></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col first">
+          <div class="box-background"></div>
+          <div class="text-center align-middle content"><p>Networking and sharing ideas</p></div>
+        </div>
+        <div class="col second">
+          <img src="./assets/img/bro.png" width="80%" height="65%">
+         </div>
+      </div>
+  </section>
 
     <!-- including javascript files here-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
