corrected mobile view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- navigation bar for the page-->
     <!-- <div class="background"><img src="assets/img/home-bg.png" height="42rem" width="90%"></div> -->
-     <div class="background"><img src="assets/img/home-bg.png" height="750px" width="60%"></div> 
+     <div class="background mob-hid"><img src="assets/img/home-bg.png" height="750px" width="60%"></div> 
     <section class="home1">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
@@ -38,36 +38,36 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+              <a class="nav-link active text-white text-center" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  text-white" href="#">About</a>
+              <a class="nav-link text-white text-center" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contact</a>
+              <a class="nav-link text-white text-center" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Opportunity</a>
+              <a class="nav-link text-white text-center" href="#">Opportunity</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Event</a>
+              <a class="nav-link text-white text-center" href="#">Event</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Team</a>
+              <a class="nav-link text-white text-center" href="#">Team</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="container d-flex" style="max-width: 100%; margin-top:20px">
-      <div class="card" style="height: fit-content; max-width: 40rem;">
+      <div class="card1" style="height: fit-content; max-width: 40rem;">
         <div class="card-body">
           <h1 class="card-title">WELCOME TO CODERS EVOKE</h1>
           <p class="card-text">Coders Evoke is all about sharing knowledge, posting achievements, participating in hackathons, discussions and many more! </p>
           <button type="button" class="btn button">Join Us</button>
         </div>
       </div>
-     <div class="amico">
+     <div class="amico mob-hid">
        <img src="./assets/img/amico.png" alt="amico" height="80%">
      </div>
     </div>
@@ -77,29 +77,32 @@
     <div class="container">
       <div class="row" style="height:25rem">
         <div class="col first">
-          <div class="box-background"></div>
-          <div class="text-center align-middle content"><p>Expand your area of expertise</p></div>
+          <img src="./assets/img/rafiki.png" width="80%" height="65%" class="desk-hid mob-view">
+          <div class="box-background mob-disp"></div>
+          <div class="text-center align-middle content mob-disp"><p>Expand your area of expertise</p></div>
         </div>
         <div class="col second">
-         <img src="./assets/img/rafiki.png" width="80%" height="65%">
+         <img src="./assets/img/rafiki.png" width="80%" height="65%" class="mob-hid">
         </div>
       </div>
-      <div class="row">
-        <div class="col first">
-          <img src="./assets/img/rafiki1.png" width="80%" height="65%">
+      <div class="row" style="height:25rem">
+        <div class="col first mob-hid">
+          <img src="./assets/img/rafiki1.png" width="80%" height="65%" class="mob-hid">
          </div>
         <div class="col second">
-          <div class="box-background"></div>
-          <div class="text-center align-middle content"><p>For support and motivation</p></div>
+          <img src="./assets/img/rafiki1.png" width="80%" height="65%" class="desk-hid mob-view">
+          <div class="box-background mob-disp"></div>
+          <div class="text-center align-middle content mob-disp"><p>For support and motivation</p></div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="height:25rem">
         <div class="col first">
-          <div class="box-background"></div>
-          <div class="text-center align-middle content"><p>Networking and sharing ideas</p></div>
+          <img src="./assets/img/bro.png" width="80%" height="65%" class="desk-hid mob-view">
+          <div class="box-background mob-disp"></div>
+          <div class="text-center align-middle content mob-disp"><p>Networking and sharing ideas</p></div>
         </div>
         <div class="col second">
-          <img src="./assets/img/bro.png" width="80%" height="65%">
+          <img src="./assets/img/bro.png" width="80%" height="65%" class="mob-hid">
          </div>
       </div>
   </section>
